set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${UH_BINARY_OUTPUT_DIR})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${UH_BINARY_OUTPUT_DIR})

add_subdirectory(pch)
add_subdirectory(common)
add_subdirectory(config)
add_subdirectory(storage)
add_subdirectory(deduplicator)
add_subdirectory(entrypoint)
add_subdirectory(coordinator)
add_subdirectory(proxy)

add_executable(uh-cluster main.cpp)
target_link_libraries(uh-cluster Threads::Threads types telemetry conf entrypoint deduplicator storage coordinator proxy)
target_precompile_headers(uh-cluster REUSE_FROM uh_precompile_headers)
